--- a/Flow/app/src/main/res/layout/fragment_meal.xml
+++ b/Flow/app/src/main/res/layout/fragment_meal.xml
@@ -1,13 +1,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/meal_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.donghyeokseo.flow.activity.MealActivity$PlaceholderFragment"
-    tools:layout_editor_absoluteY="81dp">
+    tools:context="com.donghyeokseo.flow.activity.MealActivity$PlaceholderFragment">
 
     <TextView
-        android:id="@+id/meal_date"
+        android:id="@+id/meal_date_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -15,94 +15,137 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="날짜 계산중"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/meal_moring_textview"
+        android:id="@+id/meal_breakfast_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="급식정보 받아오는중"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/morning"
+        app:layout_constraintTop_toBottomOf="@+id/breakfast_title_textView"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
 
     <TextView
-        android:id="@+id/meal_lunch_textview"
+        android:id="@+id/meal_lunch_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="급식정보 받아오는중"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lunch" />
+        app:layout_constraintTop_toBottomOf="@+id/lunch_title_textView" />
 
     <TextView
-        android:id="@+id/meal_dinner_textview"
+        android:id="@+id/meal_dinner_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="급식정보 받아오는중"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_button_linear"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dinner"
+        app:layout_constraintTop_toBottomOf="@+id/dinner_title_textView"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/morning"
+        android:id="@+id/breakfast_title_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="아침"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meal_date" />
+        app:layout_constraintTop_toBottomOf="@+id/meal_date_textView" />
 
     <TextView
-        android:id="@+id/lunch"
+        android:id="@+id/lunch_title_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="점심"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meal_moring_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/meal_breakfast_textView" />
 
     <TextView
-        android:id="@+id/dinner"
+        android:id="@+id/dinner_title_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="저녁"
+        android:textColor="#000000"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/meal_lunch_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/meal_lunch_textView" />
+
+    <LinearLayout
+        android:id="@+id/bottom_button_linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <Button
+            android:id="@+id/breakfast_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/buttonBeforeClick"
+            android:text="@string/breakfast_title" />
+
+        <Button
+            android:id="@+id/lunch_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/buttonBeforeClick"
+            android:text="@string/lunch_title" />
+
+        <Button
+            android:id="@+id/dinner_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/buttonBeforeClick"
+            android:text="@string/dinner_title" />
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
