--- a/Flow/app/src/main/res/values/colors.xml
+++ b/Flow/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGray">#cbd1db</color>
+    <color name="buttonBeforeClick">#ffffff</color>
+    <color name="buttonAfterClick">#9896a4</color>
 </resources>
