--- a/Flow/app/src/main/res/layout/activity_sign_in.xml
+++ b/Flow/app/src/main/res/layout/activity_sign_in.xml
@@ -30,6 +30,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_email_editText" />
 
+    <TextView
+        android:id="@+id/link_signup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="계정이 없으십니까? 회원가입 하기"
+        android:textSize="16dip"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_password_editText" />
+
     <Button
         android:id="@+id/login_submit_button"
         android:layout_width="wrap_content"
@@ -39,6 +52,7 @@
         android:layout_marginTop="8dp"
         android:text="확인"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_password_editText" />
+        app:layout_constraintTop_toBottomOf="@+id/link_signup" />
 </android.support.constraint.ConstraintLayout>
