--- a/Flow/app/src/main/res/layout/activity_main.xml
+++ b/Flow/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/apply_out_button"
+        android:id="@+id/apply_out_go_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="외출 외박 신청하기"
+        android:text="외출 신청하기"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view_meal_button" />
+
+    <Button
+        android:id="@+id/apply_out_sleep_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="외박 신청하기"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/apply_out_go_button" />
 
     <Button
         android:id="@+id/login_button"
@@ -34,6 +45,6 @@
         android:text="로그인 하기"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/apply_out_button" />
+        app:layout_constraintTop_toBottomOf="@+id/apply_out_sleep_button" />
 
 </android.support.constraint.ConstraintLayout>
