--- a/Flow/app/src/main/res/drawable/background_gradient.xml
+++ b/Flow/app/src/main/res/drawable/background_gradient.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="90" android:endColor="#FFB900" android:startColor="#E74856" android:type="linear" />
+            <gradient android:angle="90" android:endColor="@color/third_pink" android:startColor="@color/six_pink" android:type="linear" />
         </shape>
     </item>
 </selector>
