--- a/Flow/app/src/main/res/layout/activity_out_check.xml
+++ b/Flow/app/src/main/res/layout/activity_out_check.xml
@@ -12,8 +12,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></android.support.v7.widget.RecyclerView>
-
-    <!-- A horizontal line between the chatbox and RecyclerView -->
-
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
