--- a/Flow/app/src/main/res/layout/activity_sign_up.xml
+++ b/Flow/app/src/main/res/layout/activity_sign_up.xml
@@ -173,7 +173,7 @@
             android:layout_marginBottom="24dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/rounded"
-            android:backgroundTint="#FFB900"
+            android:backgroundTint="@color/third_pink"
             android:padding="12dp"
             android:text="계정 만들기" />
 
