--- a/Flow/app/src/main/res/layout/fragment_meal.xml
+++ b/Flow/app/src/main/res/layout/fragment_meal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient"
-    tools:context="com.donghyeokseo.flow.activity.MealActivity$PlaceholderFragment">
+    tools:context="com.donghyeokseo.flow.activity.MainActivity">
 
     <TextView
         android:id="@+id/meal_date_textView"
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="날짜 계산중"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="급식정보 받아오는중"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/breakfast_title_textView"
@@ -46,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="급식정보 받아오는중"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lunch_title_textView" />
@@ -59,7 +59,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="급식정보 받아오는중"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/bottom_button_linear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -77,7 +77,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="아침"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +92,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="점심"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="저녁"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -128,8 +128,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/buttonBeforeClick"
-            android:backgroundTint="#FFB900"
+            android:background="@color/first_pink"
             android:text="@string/breakfast_title" />
 
         <Button
@@ -137,8 +136,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/buttonBeforeClick"
-            android:backgroundTint="#FFA900"
+            android:background="@color/second_pink"
             android:text="@string/lunch_title" />
 
         <Button
@@ -146,8 +144,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/buttonBeforeClick"
-            android:backgroundTint="#FF9900"
+            android:background="@color/third_pink"
             android:text="@string/dinner_title" />
 
     </LinearLayout>
