--- a/Flow/app/src/main/res/drawable/notices_border.xml
+++ b/Flow/app/src/main/res/drawable/notices_border.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"
+        android:bottomLeftRadius="1dp"
+        android:bottomRightRadius="1dp"
         android:radius="2dp"
-        android:topRightRadius="0dp" />
+        android:topRightRadius="1dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorGray" />
+        android:color="@color/black" />
 </shape>
