--- a/Flow/app/src/main/res/layout/item_notice.xml
+++ b/Flow/app/src/main/res/layout/item_notice.xml
@@ -1,74 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_notice_root_view"
     xmlns:app="http://schemas.android.com/tools"
+    android:id="@+id/item_notice_root_view"
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:background="@drawable/notices_border"
     android:orientation="horizontal"
-    android:paddingEnd="8dp"
-    android:paddingStart="8dp"
+    android:padding="2dp"
     app:ignore="NamespaceTypo">
-
-    <TextView
-        android:id="@+id/textview_notice_idx"
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="5dp"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        app:autoSizeTextType="uniform" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingStart="5dp"
-        app:ignore="RtlSymmetry">
+        android:background="@color/four_pink"
+        android:orientation="horizontal"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp">
 
         <TextView
-            android:id="@+id/textview_notice_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:ellipsize="end"
-            android:maxLines="1"
-            android:textAlignment="viewStart"
+            android:id="@+id/textview_notice_idx"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginEnd="5dp"
+            android:gravity="center"
+            android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            app:autoSizeTextType="uniform" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingStart="5dp"
+            app:ignore="RtlSymmetry">
 
             <TextView
-                android:id="@+id/textview_notice_author"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
+                android:id="@+id/textview_notice_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textAlignment="viewStart"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/colorBlack" />
-
-            <TextView
-                android:id="@+id/textview_notice_date"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textAlignment="viewStart"
-                android:textColor="@color/black" />
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textview_notice_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/black" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/colorBlack" />
+
+                <TextView
+                    android:id="@+id/textview_notice_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/black" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
